filter first version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,13 +18,14 @@ if (MSVC_VERSION GREATER_EQUAL "1900")
 endif()
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-    add_compile_options(-Wall -Wextra -Werror -Wpedantic -Wconversion -Wformat -Wunused -Wshadow -Wuninitialized -Wsign-compare)
+    add_compile_options(-Wall -Wextra -Werror -Wpedantic -Wconversion -Wformat -Wunused -Wshadow -Wuninitialized)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     add_compile_options(/W4)
 endif()
 
 include_directories(generator/headers)
 include_directories(plotters/headers)
+include_directories(filter/headers)
 
 file(GLOB GENERATOR_HEADERS generator/headers/*.h)
 
@@ -33,6 +34,6 @@ add_executable(digital_signal_processing
                ${GENERATOR_HEADERS}
                generator/src/signal_generate.cpp
                plotters/headers/plotter.h
-        plotters/src/plotter.cpp
-        filter/headers/windowing_filter.h
-        filter/src/windowing_filter.cpp)
+               plotters/src/plotter.cpp
+               filter/headers/windowing_filter.h
+               filter/src/windowing_filter.cpp)
