--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,9 @@ elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     add_compile_options(/W4)
 endif()
 
-include_directories(generator/headers)
 include_directories(plotters/headers)
+include_directories(generator/headers)
+include_directories(autocorrelation_function/headers)
 
 file(GLOB GENERATOR_HEADERS generator/headers/*.h)
 
@@ -33,6 +34,9 @@ add_executable(digital_signal_processing
                ${GENERATOR_HEADERS}
                generator/src/signal_generate.cpp
                plotters/headers/plotter.h
-        plotters/src/plotter.cpp
-        filter/headers/windowing_filter.h
-        filter/src/windowing_filter.cpp)
+               plotters/src/plotter.cpp
+               filter/headers/windowing_filter.h
+               filter/src/windowing_filter.cpp
+               autocorrelation_function/headers/ring_shift_function.h
+               autocorrelation_function/src/ring_shift_function.cpp
+               autocorrelation_function/headers/autocorrelation_function.h)
