--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,6 @@ add_executable(digital_signal_processing
                filter/src/windowing_filter.cpp
                autocorrelation_function/headers/ring_shift_function.h
                autocorrelation_function/src/ring_shift_function.cpp
-               autocorrelation_function/headers/autocorrelation_function.h)
+               autocorrelation_function/headers/autocorrelation_function.h
                math/headers/math_tools.h
                math/src/math_tools.cpp)
