--- a/autocorrelation_function/CMakeLists.txt
+++ b/autocorrelation_function/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.26)
 
 include_directories(headers)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../math/headers)
 
 file(GLOB AUTOCORRELATION_HEADERS headers/*.h)
 file(GLOB AUTOCORRELATION_SOURCE src/*.cpp)
