add plotter to generator

--- a/generator/CMakeLists.txt
+++ b/generator/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.22.1)
 
 include_directories(headers)
+include_directories(../plotters/headers)
 
 file(GLOB GENERATOR_HEADERS headers/*.h)
 file(GLOB GENERATOR_SOURCE src/*.cpp)
