--- a/filter/CMakeLists.txt
+++ b/filter/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.22.1)
 
 include_directories(headers)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../plotters/headers)
 
 file(GLOB FILTER_HEADERS headers/*.h)
 file(GLOB FILTER_SOURCE src/*.cpp)
