--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,14 @@ include(CheckCXXCompilerFlag)
 
 CHECK_CXX_COMPILER_FLAG ("-std=c++17" COMPILER_HAVE_CPP17)
 if (COMPILER_HAVE_CPP17)
-    message(STATUS "ADDING C++17")
+    message(STATUS "Adding C++17")
     set(CMAKE_CXX_STANDARD 17)
 endif(COMPILER_HAVE_CPP17)
 
 if (MSVC_VERSION GREATER_EQUAL "1900")
     CHECK_CXX_COMPILER_FLAG("/std:c++17" _cpp_17)
     if (_cpp_17)
-        message(STATUS "ADDING C++17")
+        message(STATUS "Adding C++17")
         add_compile_options("/std:c++17")
     endif()
 endif()
@@ -32,11 +32,18 @@ add_subdirectory(autocorrelation_function)
 include_directories(filter/headers)
 include_directories(generator/headers)
 include_directories(plotters/headers)
+include_directories(autocorrelation_function/headers)
+include_directories(math/headers)
 
 add_executable(digital_signal_processing
                main.cpp
 )
 
-target_link_libraries(digital_signal_processing Generator Math AutocorrelationFunction Filter Plotter)
+find_package(FFTW3 REQUIRED)
+set(CMAKE_CXX_FLAGS "-lfftw3")
+target_link_libraries(digital_signal_processing Generator Math AutocorrelationFunction Filter Plotter fftw3)
+
 add_compile_definitions(p_signal="${CMAKE_CURRENT_SOURCE_DIR}/plotters/files/signal.txt")
-add_compile_definitions(p_autocorr="${CMAKE_CURRENT_SOURCE_DIR}/plotters/files/autocorrelation_standard.txt")
+add_compile_definitions(p_filter="${CMAKE_CURRENT_SOURCE_DIR}/plotters/files/filter.txt")
+add_compile_definitions(p_autocorr="${CMAKE_CURRENT_SOURCE_DIR}/plotters/files/autocorrelation.txt")
+add_compile_definitions(p_dist="${CMAKE_CURRENT_SOURCE_DIR}/plotters/files/distribution_function.txt")
