repair cli and many changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,15 +41,14 @@ include_directories(distribution_function/headers)
 
 add_executable(digital_signal_processing
                main.cpp
-        cli/headers/cli.h
-        cli/src/cli.cpp
 )
 
 find_package(FFTW3 REQUIRED)
 set(CMAKE_CXX_FLAGS "-lfftw3")
 target_link_libraries(digital_signal_processing Generator Math AutocorrelationFunction Filter Plotter Distribution CLI fftw3)
 
-add_compile_definitions(p_signal="${CMAKE_CURRENT_SOURCE_DIR}/plotters/files/signal.txt")
-add_compile_definitions(p_filter="${CMAKE_CURRENT_SOURCE_DIR}/plotters/files/filter.txt")
-add_compile_definitions(p_autocorr="${CMAKE_CURRENT_SOURCE_DIR}/plotters/files/autocorrelation.txt")
-add_compile_definitions(p_dist="${CMAKE_CURRENT_SOURCE_DIR}/plotters/files/distribution_function.txt")
+add_compile_definitions(PLT_SIGNAL="${CMAKE_CURRENT_SOURCE_DIR}/plotters/files/signal.txt")
+add_compile_definitions(PLT_FILTER="${CMAKE_CURRENT_SOURCE_DIR}/plotters/files/filter.txt")
+add_compile_definitions(PLT_AUTOCORRELATION_FUNC="${CMAKE_CURRENT_SOURCE_DIR}/plotters/files/autocorrelation.txt")
+add_compile_definitions(PLT_DISTRIBUTION="${CMAKE_CURRENT_SOURCE_DIR}/plotters/files/distribution_function.txt")
+add_compile_definitions(PLT_RESULT="${CMAKE_CURRENT_SOURCE_DIR}/../plotters/files/result.txt")
