--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -13,7 +13,10 @@ file(GLOB CLI_SOURCE src/*.cpp)
 
 add_library(CLI ${CLI_HEADERS} ${CLI_SOURCE})
 
-add_compile_definitions(p_signal="${CMAKE_CURRENT_SOURCE_DIR}/plotters/files/signal.txt")
-add_compile_definitions(p_filter="${CMAKE_CURRENT_SOURCE_DIR}/plotters/files/filter.txt")
-add_compile_definitions(p_autocorr="${CMAKE_CURRENT_SOURCE_DIR}/plotters/files/autocorrelation.txt")
-add_compile_definitions(p_dist="${CMAKE_CURRENT_SOURCE_DIR}/plotters/files/distribution_function.txt")
+add_compile_definitions(PLT_SIGNAL="${CMAKE_CURRENT_SOURCE_DIR}/../plotters/files/signal.txt")
+add_compile_definitions(PLT_FILTER="${CMAKE_CURRENT_SOURCE_DIR}/../plotters/files/filter.txt")
+add_compile_definitions(PLT_AUTOCORRELATION_FUNC="${CMAKE_CURRENT_SOURCE_DIR}/../plotters/files/autocorrelation.txt")
+add_compile_definitions(PLT_DISTRIBUTION="${CMAKE_CURRENT_SOURCE_DIR}/../plotters/files/distribution_function.txt")
+add_compile_definitions(PLT_RESULT="${CMAKE_CURRENT_SOURCE_DIR}/../plotters/files/result.txt")
+
+target_link_libraries(CLI Generator Math AutocorrelationFunction Filter Plotter Distribution fftw3)
