--- a/generator/CMakeLists.txt
+++ b/generator/CMakeLists.txt
@@ -6,5 +6,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../plotters/headers)
 file(GLOB GENERATOR_HEADERS headers/*.h)
 file(GLOB GENERATOR_SOURCE src/*.cpp)
 
-add_library(Generator ${GENERATOR_HEADERS} ${GENERATOR_SOURCE}
-        src/noise_generator.cpp)
+add_library(Generator ${GENERATOR_HEADERS} ${GENERATOR_SOURCE})
